concord_examples/tests/ui/endpoint_body_block_removed.stderr
error: endpoint body blocks are not supported; declare body in `Name(body: Codec<...>)`
  --> tests/ui/endpoint_body_block_removed.rs:12:10
   |
12 |     POST Create
   |          ^^^^^^
